WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225103
Fix animation of the visibility CSS property between "hidden" and "collapse"
https://bugs.webkit.org/show_bug.cgi?id=225103
Summary
Fix animation of the visibility CSS property between "hidden" and "collapse"
Antoine Quint
Reported
2021-04-27 06:52:15 PDT
Fix animation of the visibility CSS property between "hidden" and "collapse"
Attachments
Patch
(4.16 KB, patch)
2021-04-27 06:53 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2021-04-27 06:53:50 PDT
Created
attachment 427146
[details]
Patch
EWS
Comment 2
2021-04-27 08:29:37 PDT
Committed
r276639
(
237067@main
): <
https://commits.webkit.org/237067@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427146
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-04-27 08:30:20 PDT
<
rdar://problem/77211075
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug