Fix animation of the visibility CSS property between "hidden" and "collapse" https://bugs.webkit.org/show_bug.cgi?id=225103

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

Mark 1 WPT progression.

* web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-002-expected.txt:

Source/WebCore:

The Web Animations spec details the special behavior when animating the visibility property
in https://drafts.csswg.org/web-animations-1/#animating-visibility. There it says that when
interpolating between non-visible values, we should use discrete interpolation formula.

* animation/CSSPropertyAnimation.cpp:
(WebCore::blendFunc):


Canonical link: https://commits.webkit.org/237067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276639 268f45cc-cd09-0410-ab3c-d52691b4dbfc